--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <nav class="nav-menu md:flex space-x-4 items-center">
                 <a href="#tests" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="Tests Section">Tests</a>
                 <a href="https://govexam.github.io/DAILYTEST/" class="text-blue-600 hover:text-blue-800 font-medium" target="_blank" aria-label="TEST">TEST</a>
-                <a href="#tests" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="TEST-1">TEST-1</a>
+                <a href="https://github.com/Govexam/DAILYTEST/blob/88e1771ac954148f4bba6ab025924894e442a528/index%20(7).html" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="TEST-1">TEST-1</a>
                 <a href="#tests" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="TEST-2">TEST-2</a>
                 <a href="#about" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="About Us Section">About Us</a>
                 <a href="#contact" class="text-blue-600 hover:text-blue-800 font-medium" aria-label="Contact Us Section">Contact Us</a>
